--- a/Contacts.Core/Contacts.Core.csproj
+++ b/Contacts.Core/Contacts.Core.csproj
@@ -121,16 +121,28 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Models\Address.cs" />
+    <Compile Include="Models\Business.cs" />
+    <Compile Include="Models\ContactTypeModel.cs" />
+    <Compile Include="Models\EmailAddress.cs" />
+    <Compile Include="Models\Name.cs" />
+    <Compile Include="Models\Phone.cs" />
+    <Compile Include="Models\WebAccount.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Contacts.Core.rd.xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Graph">
+      <Version>5.41.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Graph.Core">
+      <Version>3.1.6</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.14</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Models\" />
     <Folder Include="Services\" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
