--- a/Contacts.Uwp/Contacts.Uwp.csproj
+++ b/Contacts.Uwp/Contacts.Uwp.csproj
@@ -122,6 +122,7 @@
     <Compile Include="AppMainPage.xaml.cs">
       <DependentUpon>AppMainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Common\HostBackdropAcrylicBrush.cs" />
     <Compile Include="Pages\ContactInformationDetailsPage.xaml.cs">
       <DependentUpon>ContactInformationDetailsPage.xaml</DependentUpon>
     </Compile>
@@ -139,6 +140,7 @@
     <Content Include="Assets\LargeTile.scale-150.png" />
     <Content Include="Assets\LargeTile.scale-200.png" />
     <Content Include="Assets\LargeTile.scale-400.png" />
+    <Content Include="Assets\NoiseHigh.png" />
     <Content Include="Assets\SmallTile.scale-100.png" />
     <Content Include="Assets\SmallTile.scale-125.png" />
     <Content Include="Assets\SmallTile.scale-150.png" />
@@ -200,6 +202,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Styles\Themes\Dark.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\Themes\Light.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm">
@@ -218,9 +228,7 @@
       <Version>13.0.3</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Styles\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Contacts.Core\Contacts.Core.csproj">
       <Project>{f836d135-e430-4092-a142-3821a963fb90}</Project>
